:lipstick: Fix spacing visual regression

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,3 +57,9 @@ $fa-font-path: '../webfonts/' !default; // vite.config.mts overrides this
 @import './scss/components/login-button';
 @import './scss/components/authentication-errors';
 @import './scss/components/govmetric_snippet';
+
+// TODO: needs to be cleaned up at some point. The original component code was removed
+// as part of the formio.js removal.
+.openforms-loading-indicator + * {
+  margin-block-start: 20px;
+}
